src/components/Projects/Projects.css
.section-container:nth-of-type(5) .section{
  padding: 2rem;
  padding-bottom: 1rem;
}
.project-container.section-container .section {
  padding-top: 2rem;
}

.project {
  display: grid;
  grid-template-columns: 1.4fr 0.3fr 1fr;
  transition: 500ms linear;
  transition-property: filter, opacity, transform;
}

.project.hidden{
  transform: translateX(1.5rem);
}

.project-img,
.project-content { grid-row: 1; }

.project-img {
  grid-column: 1 / 3;
  width: 100%;
  border-radius: 5px;
  box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.2);
}

.project-content {
  grid-column: 2 / -1;
  font-size: 1em;
  display: flex;
  gap: 1rem;
  flex-direction: column;
  justify-content: center;
  transition: 300ms background-color ease-in-out;
}

.project-name,
.project-desc { text-align: right; }

.project-name {
  font-size: 1.7rem;
  color: var(--accent-clr);
  transition: 300ms color ease-in-out;
}

.project-desc {
  background-color: var(--alt-bg);
  box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.2);
  padding: 1rem;
  border-radius: 5px;
  margin: unset;
  transition: 300ms background-color ease-in-out;
}

.project-links,
.project-tech-container {
  display: flex;
  justify-content: flex-end;
  flex-wrap: wrap;
  gap: 0.7rem;
}
.project-links svg {
  height: 1.4rem;
  width: 1.4rem;
  fill: var(--primary-clr);
  transition: fill 300ms ease-in-out;
}

.section-container:nth-of-type(8) .project {
  margin-bottom: 0rem;
}
.section-container:nth-of-type(7) .project {
  grid-template-columns: 1fr 0.3fr 1.4fr;
}
.section-container:nth-of-type(7) .project.hidden {
  transform: translateX(-1.5rem);
}
.section-container:nth-of-type(7) .project-img {
  grid-column: 2 / -1;
}
.section-container:nth-of-type(7) .project-content {
  grid-column: 1 / 3;
}
.section-container:nth-of-type(7) :is(.project-name,.project-desc) {
  text-align: left;
}
.section-container:nth-of-type(7) :is(.project-links,.project-tech-container) {
  justify-content: flex-start;
}

@media (max-width: 870px) {
  .project {
    display: flex;
    flex-direction: column;
  }
  .project-content {
    padding: 1.5rem;
    background-color: var(--alt-bg);
    box-shadow: 0 0 10px 4px rgba(0, 0, 0, 0.2);
    border-top: 2px solid var(--accent-clr);
    border-bottom-right-radius: 5px;
    border-bottom-left-radius: 5px;
  }
  .project-img {
    border-bottom-left-radius: 0;
    border-bottom-right-radius: 0;
  }
  .project-name,
  .project-desc { text-align: left; }
  .project-desc { 
    padding: 0.5rem 0; 
    box-shadow: initial;
  }
  .project-links,
  .project-tech-container { justify-content: initial; }
}

